fix: fix gap formfield

--- a/newsletter/src/components/newsletter.module.css
+++ b/newsletter/src/components/newsletter.module.css
@@ -51,6 +51,12 @@
         }
     }
 
+    & .formField {
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+    }
+
     & .labelGroup {
         display: flex;
         flex-direction: row;
